syntax = "proto3";

package loms_v1;

option go_package = "gitlab.ozon.dev/nlnaa/homework-1/checkout/pkg/loms_v1;loms_v1";

import "google/protobuf/empty.proto";

service LomsV1 {
    rpc Stocks (StocksRequest) returns (StocksResponse);
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
    rpc CancelOrder (CancelOrderRequest) returns (google.protobuf.Empty);
    rpc OrderList (OrderListRequest) returns (OrderListResponse);
    rpc OrderPayed (OrderPayedRequest) returns (google.protobuf.Empty);
}

// common info

message StockItem {
    int64 WarehouseId = 1;
    uint64 Count = 2;    
}

message Item {
    uint32 sku = 1;
    uint64 count = 2;
}

message OrderItem {
    uint64 orderId = 1;
    string status = 2;
}

message OrderInfo {
    OrderItem order = 1;
    int64 user = 2;
    repeated Item items = 3;
}

// requests & responses

message StocksRequest {
    uint32 sku = 1;
}

message StocksResponse {
    repeated StockItem stocks = 1;
}

message CreateOrderRequest {
    repeated Item items = 1;
}

message CreateOrderResponse {
    int64 orderId = 1;
    string status = 2;
}

message CancelOrderRequest {
    uint64 orderId = 1;
}

message OrderListRequest {
    uint64 orderId = 1;
}

message OrderListResponse {
    OrderInfo orderInfo = 1;
}

message OrderPayedRequest {
    uint64 orderId = 1;
}

